--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(image/hd.png);
+    background-image: url(hd.png);
     background-size: cover;
     background-position: 200px 0;
     background-repeat: no-repeat;
